fixed background to stretch

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,14 +6,18 @@ body {
   font-family: "Open Sans", serif;
 }
 
-.wrapper {
+.container-fluid {
   background: linear-gradient(to right, #700b74);
-  height: 100vh;
+height: 100%;
+
 }
 
 .styling {
-  font-size: 50px;
+  font-size: 25px;
   margin-left: 20px;
+  font-family: 'Roboto Slab',
+  serif;
+
 }
 
 .title {
@@ -22,16 +26,13 @@ body {
   font-weight: 800;
   display: flex;
   justify-content: center;
-      text-shadow:2px 2px 2px #000000;
-
-  
+  text-shadow: 2px 2px 2px #000000;
 }
 
 .login {
   height: 100vh;
   background: url("img/ideas.png") center center no-repeat;
   margin-bottom: 100px;
-  display: absolute;
   align-items: center;
   justify-content: center;
   text-align: center;
